Updated home page description

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <div class="home-content">
           <h1>Welcome to The Physics Machine</h1>
           <p>Your interactive tool for physics calculations and unit conversions. 
-            Currently there is support for kinematics, energy, momentum, and collisions. 
-            In the future, other SPH4U topics will be added.</p>
+            Currently there is support for kinematics, projectile motion, energy, 
+            momentum, and collisions. In the future, other SPH4U topics may be added.</p>
             <p> - Joel Joseph</p>
         </div>
       </div>
